navbar overlap fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,9 @@
  */
 @import "bootstrap";
 
-
+body {
+  padding-top: 40px;
+}
 h3.quote {
   float: right;
   font-weight: normal;
